--- a/programme/programme.tex
+++ b/programme/programme.tex
@@ -110,17 +110,17 @@
 \rowcolor{yellow!20}
 14:45--16:00 & \textbf{Poster Session \& Coffee} \\
 & Letizia Cerqueglini \\
-& \textit{Exploring the Prosody-Morphology Interface: A Typological Assessment of Mutallat Arabic Pausal Forms}  \\
+& \textit{Exploring the Prosody-Morphology Interface: A Typological Assessment of Mutallat Arabic Pausal Forms}  \\ \\
 & Pratikshya Guru \\
-& \textit{Experimental Method in understanding Empty Nuclei and Rhymal Coda}  \\
+& \textit{Experimental Method in understanding Empty Nuclei and Rhymal Coda}  \\ \\
 & Alireza Jaferian \\
-& \textit{A typological tool for marginal consonant clusters}  \\
+& \textit{A typological tool for marginal consonant clusters}  \\ \\
 & Giorgos Markopoulos \& Anthi Revithiadou \\
-& \textit{Lexical stress with gradient Theme prominence: A typological perspective}  \\
+& \textit{Lexical stress with gradient Theme prominence: A typological perspective}  \\ \\
 & Elena Perekhvalskaya \& Valentin Vydrin \\
-& \textit{Tonal density index as a yardstick to the functional load of tone}  \\
+& \textit{Tonal density index as a yardstick to the functional load of tone}  \\ \\
 & Valentin Vydrin \& Kirill Maslinsky \\
-& \textit{Towards a typology of tone}  \\
+& \textit{Towards a typology of tone}  \\ \\
 & Andrew Wedel \\
 & \textit{Chain Shifts and Transphonologizations are Driven by Homophony Avoidance} \\
 \midrule
@@ -130,6 +130,8 @@
 & \textit{Teasing apart learning and processing biases in phonological typology}  \\
 \midrule
 17:00--17:30 & \textbf{Wrap-up} \\
+\midrule
+\textcolor{red}{17:30--} & \textcolor{red}{\textbf{Workshop Dinner}, exact time and place to be announced.}\\
 \bottomrule
 \end{tabularx}
 
